build docs as part of unit tests

--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -27,3 +27,7 @@ jobs:
       - name: Run unit tests
         run: |
           pytest .
+
+      - name: Build MESS book
+        run: |
+          jupyter-book build docs
