fixing autosummary background

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -48,3 +48,5 @@ sphinx:
     html_theme: pydata_sphinx_theme
     html_theme_options:
       navigation_with_keys: False
+    html_static_path: ["_static"]
+    html_css_files: ["style.css"]
