--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: "MESS: Modern Electronic Structure Simulations"
+title: "MESS"
 author: "Graphcore"
 copyright: "2023"
 
@@ -15,6 +15,11 @@ latex:
   latex_engine: xelatex
   latex_documents:
     targetname: book.tex
+
+parse:
+  myst_enable_extensions:
+    - amsmath
+    - dollarmath
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
@@ -50,3 +55,4 @@ sphinx:
       navigation_with_keys: False
     html_static_path: ["_static"]
     html_css_files: ["style.css"]
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
