--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -8,6 +8,7 @@ parts:
     chapters:
     - file: tour
     - file: prologue
+    - file: quirks
   - caption: Miscellaneous Things that Might be Useful
     chapters:
     - file: gto_integrals
