fix progress bar in optax example

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,14 @@ dependencies = [
   "basis_set_exchange",
   "sympy",
   "pyquante2@git+https://github.com/rpmuller/pyquante2@pure",
-  "tqdm",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
   "jupyter-book",
+  "tqdm",
+  "ipywidgets",
   "pytest",
   "pytest-benchmark",
   "pre-commit",
