adding initial batching notebook

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,6 +11,7 @@ execute:
   execute_notebooks: force
   exclude_patterns:
     - 'tour.ipynb'
+    - 'batching.ipynb'
 
 # Define the name of the latex output file for PDF builds
 latex:
